objects/shipment__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Bangalore</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kolkata</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>supplier_number__c</fullName>
        <label>supplier number</label>
        <referenceTo>supplier__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>shipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00}</displayFormat>
        <label>shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>